test/official_tests/variable/undefined_global.lox
print notDefined;  // error: {"line":1,"message":"Undefined variable 'notDefined'","type":"RuntimeError"}
